# dcp

./: .gitignore  Cargo.toml  README.md
dcp/: Cargo.toml
dcp/examples/: emcc-min.sh  emsc.c  funcs.c  loops.c  test.c
dcp/src/: cfg.rs  cfg_gen.rs  lib.rs  local_cfg.rs  loops.rs  main.rs  order.rs  stack_frame.rs
dcp/src/arch/: armv8.rs  mod.rs  wasm.rs
dcp/src/dataflow/: dead_writes.rs  every_use.rs  func_args.rs  mod.rs  single_use.rs  ssaify.rs  stack_frame.rs
dcp/src/ir/: expr.rs  lir.rs  mir.rs  mod.rs  pretty.rs  ty.rs
dcp/src/loop_detect/: fors.rs  loops.rs  mod.rs  whiles.rs
dcp/src/ofile/: macho.rs  mod.rs  wasmmod.rs
dcp/src/opt/: control.rs  expr.rs  fors.rs  ifs.rs  loops.rs  mod.rs  whiles.rs
dcp_abi/: Cargo.toml
dcp_abi/src/: lib.rs
dcp_armv8_to_ir/: Cargo.toml
dcp_armv8_to_ir/src/: lib.rs
dcp_cf_pat/: Cargo.toml
dcp_cf_pat/src/: fors.rs  ifs.rs  lib.rs  loops.rs
dcp_cfg/: Cargo.toml
dcp_cfg/src/: lib.rs
dcp_cli/: Cargo.toml
dcp_cli/src/: main.rs
dcp_dataflow/: Cargo.toml
dcp_dataflow/src/: dead_writes.rs  lib.rs  single_use.rs
dcp_ir/: Cargo.toml
dcp_ir/src/: lib.rs
dcp_ir_to_cfg/: Cargo.toml
dcp_ir_to_cfg/src/: lib.rs
dcp_ofile/: Cargo.toml
dcp_ofile/src/: lib.rs
dcp_reorder/: Cargo.toml
dcp_reorder/src/: lib.rs
dcp_tidy/: Cargo.toml
dcp_tidy/src/: lib.rs
