[package]
name = "dcp_armv8_to_ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "0.11.0"
ir = { path = "../dcp_ir", package = "dcp_ir" }
abi = { path = "../dcp_abi", package = "dcp_abi" }
