[package]
name = "dcp_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
dcp = { path = "../dcp" }
# dcp_lir = { path = "../dcp_lir" }
# dcp_lir_gen = { path = "../dcp_lir_gen" }
# dcp_order = { path = "../dcp_order" }
# dcp_cfg = { path = "../dcp_cfg" }
# dcp_cfg_gen = { path = "../dcp_cfg_gen" }
# dcp_dataflow = { path = "../dcp_dataflow" }
