[package]
name = "dcp_reorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir = { package = "dcp_ir", path = "../dcp_ir" }
cfg = { package = "dcp_cfg", path = "../dcp_cfg" }
ir_to_cfg = { package = "dcp_ir_to_cfg", path = "../dcp_ir_to_cfg" }
